--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
     display: inline-block;
 }
 
+.map-container {
+    user-select: none;
+}
+
 .data-line {
     display: block;
     padding: 2px 10px;
