--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,26 @@
 .map-container, .data-container {
     display: inline-block;
+    max-width: 50%;
 }
 
 .map-container {
     user-select: none;
 }
 
-.data-line {
-    display: block;
-    padding: 2px 10px;
+.data-container {
+    vertical-align: top;
+}
+
+.district-data {
+    display: inline-block;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    vertical-align: top;
+}
+
+.district-data-name {
+    text-align: center;
+    font-weight: bold;
+    padding-bottom: 5px;
 }
