Better show when you're done

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,14 @@
     margin: 0px;
 }
 
+.data-container th {
+    text-align: left;
+}
+
+.district-data td:first-child {
+    text-align: center;
+}
+
 .map-buttons button {
     background-color: white;
     border: 1px solid #ccc;
